--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,5 @@ Thumbs.db
 *.opus
 *.pcm
 !/fixtures/**/*.wav
-/CHANGES.md
-/EPIC_ISSUE.md
-/make-source-tar.sh
 rtp-opus-streamer-*.tar.gz
+make-source-tar.sh
