Phase 1: Core Pipeline - WAV → RTP → Playback (#3)
## Phase 1: Core Pipeline

Complete audio streaming: WAV → Opus → RTP → UDP → Decode → Playback

**What's Included:**
- Sender: WAV reader, Opus encoder (24kbps), RTP packets, UDP TX
- Receiver: UDP RX, RTP parser, Opus decoder, cpal playback
- 39 tests, CI workflow, test infrastructure, full docs

**Testing:** All tests pass locally and in CI. Manual audio playback verified.

**Known Gap:** Integration tests validate components individually, not full sender→receiver pipeline (binaries aren't libraries). Phase 2 will restructure for true end-to-end testing.

Closes #2

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 /target/
 **/*.rs.bk
 *.pdb
-Cargo.lock
 
 # IDE
 .vscode/
@@ -20,7 +19,5 @@ Thumbs.db
 *.opus
 *.pcm
 !/fixtures/**/*.wav
-/CHANGES.md
-/EPIC_ISSUE.md
-/make-source-tar.sh
 rtp-opus-streamer-*.tar.gz
+make-source-tar.sh
