Phase 2: Network Resilience - Jitter Buffer & Loss Handling
- Add configurable jitter buffer (60ms default)
- Implement packet reordering and loss detection
- Add statistics tracking (loss rate, reorder rate)
- Create common RTP library crate
- Restructure sender/receiver as libraries
- Add network simulator and integration tests
- Update documentation

Closes #4

--- a/receiver/Cargo.toml
+++ b/receiver/Cargo.toml
@@ -6,11 +6,16 @@ authors.workspace = true
 license.workspace = true
 repository.workspace = true
 
+[lib]
+name = "receiver"
+path = "src/lib.rs"
+
 [[bin]]
 name = "receiver"
-path = "src/main.rs"
+path = "src/bin/receiver.rs"
 
 [dependencies]
+rtp-opus-common = { path = "../common" }
 opus.workspace = true
 cpal.workspace = true
 tokio.workspace = true
