--- a/sender/Cargo.toml
+++ b/sender/Cargo.toml
@@ -6,11 +6,16 @@ authors.workspace = true
 license.workspace = true
 repository.workspace = true
 
+[lib]
+name = "sender"
+path = "src/lib.rs"
+
 [[bin]]
 name = "sender"
-path = "src/main.rs"
+path = "src/bin/sender.rs"
 
 [dependencies]
+rtp-opus-common = { path = "../common" }
 opus.workspace = true
 hound.workspace = true
 tokio.workspace = true
@@ -18,4 +23,4 @@ anyhow.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 clap.workspace = true
-rand = "0.8"
+rand.workspace = true
