feat(phase3): add observability runtime polish & manual system test
This change completes the Phase 3 runtime and observability integration.

Key updates:
- Add a manual end-to-end sender/receiver system test script
  - ci-local.sh passes (local CI run)
  - Supports optional duration argument
  - Performs final Prometheus metrics scrape on shutdown
- Log binary version at startup for sender and receiver
  (sourced from Cargo.toml via CARGO_PKG_VERSION)
- Verify compatibility with existing CI via test-all.sh

No behavior changes to core RTP or audio pipelines.
All changes are additive and focused on operability and validation.

Closes issue #3

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,12 @@ tokio = { version = "1.35", features = ["full"] }
 # Utilities
 anyhow = "1.0"
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
 clap = { version = "4.4", features = ["derive"] }
 rand = "0.8"
+
+# Observability
+prometheus = "0.13"
+hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
+atty = "0.2"
