--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -8,3 +8,9 @@ repository.workspace = true
 
 [dependencies]
 anyhow.workspace = true
+prometheus.workspace = true
+hyper.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
+atty.workspace = true
+tokio.workspace = true
